--- a/spring_security_demo3/pom.xml
+++ b/spring_security_demo3/pom.xml
@@ -70,6 +70,19 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>5.0.0.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/c3p0/c3p0 -->
+		<dependency>
+			<groupId>c3p0</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.0.4</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
+
 
 
 	</dependencies>
